--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,53 @@
-Projects
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css" />
+  <title>Strona barbary</title>
+</head>
+<body>
+  <!-- HEADER - Menu i obrazek -->
+  <header>
+   <nav id="menu" role="navigation"></nav>
+    <ul class="menu">
+      <li class="mobile-title">Menu: </li>
+      <li><a href="index.html">About me</a></li>
+      <li><a href="skills.html">Skills</a></li>
+      <li><a href="projects.html">My Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+   </nav>
+  </header>
+  <!-- CONTENT - Sekcja o mnie -->
+  <div class="content">projects</div>
+  <!-- FOOTER - 2 Kolumny - Formularz Kontakt -->
+  <footer>
+    <div>my contact data</div>
+    <div class="contact">
+      <div class="contact-column">
+        <div class="contact-data">
+          Barbara Kwiatkowska <br/>
+          Mystreet 1/1 <br/>
+          00-222 City <br/>
+          Poland <br/>
+          Phone: (+48) 001-000-111
+        </div>
+      </div>
+      <div class="contact-column">
+        <form class="contact-form" action="" class="form">
+          <p class="form-header">Contact with me!</p>
+          <input type="text" name="name" placeholder="Name"><br>
+          <input type="e-mail" name="e-mail" placeholder="Enter your e-mail address"><br>
+          <textarea name="message" rows="5" placeholder="Message:"></textarea><br>
+          <div class="form-submit">
+            <input type="submit" value="Sent">
+          </div>
+        </form>
+      </div>   
+    </div>
+  </footer>
+</body>
+</html>
