about me-picture

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
    </nav>
   </header>
   <!-- CONTENT - Sekcja o mnie -->
-  <div class="content">content</div>
+  <div class="content">
+    <!-- row 1 -->
+    <div class="about-me-picture"></div>
+    <!-- row 2 -->
+    <div class="about-me-description"></div>
+  </div>
   <!-- FOOTER - 2 Kolumny - Formularz Kontakt -->
   <footer>
     <div>my contact data</div>
