About me titles

--- a/index.html
+++ b/index.html
@@ -24,14 +24,28 @@
   <!-- CONTENT - Sekcja o mnie -->
   <div class="content">
     <!-- row 1 -->
-    <div class="about-me-picture"></div>
+    <div class="about-me-picture">
+      <span class="about-me-title">Barbara Kwiatkowska<br/>
+      SEO Specialist</span>
+    </div>
     <!-- row 2 -->
-    <div class="about-me-description"></div>
+    <div class="about-me-description">
+      <div class="about-me-column">
+        <img src="img/me_img.jpg" alt="barbara kwiatkowska picture" />
+      </div>
+      <div class="about-me-column">
+        <div class="about-me-column-text">
+          <h2>About me</h2><br />
+          <p>A diligent, creative, responsible, optimistic person who work equally well as part of a team or on own initiative.</p>
+        </div>
+      </div>
+
+    </div>
+
   </div>
   <!-- FOOTER - 2 Kolumny - Formularz Kontakt -->
   <footer>
-    <div>my contact data</div>
-    <div class="contact">
+    <div id="contact" class="contact">
       <div class="contact-column">
         <div class="contact-data">
           Barbara Kwiatkowska <br/>
