--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,7 @@
   <div class="content">projects</div>
   <!-- FOOTER - 2 Kolumny - Formularz Kontakt -->
   <footer>
-    <div>my contact data</div>
-    <div class="contact">
+    <div id="contact" class="contact">
       <div class="contact-column">
         <div class="contact-data">
           Barbara Kwiatkowska <br/>
