--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,9 @@
    </nav>
   </header>
   <!-- CONTENT - Sekcja o mnie -->
-  <div class="content">projects</div>
+  <div class="content projects">  
+    <h1 class="content-title">My projects</h1>
+  </div>
   <!-- FOOTER - 2 Kolumny - Formularz Kontakt -->
   <footer>
     <div id="contact" class="contact">
