--- a/skills.html
+++ b/skills.html
@@ -22,7 +22,34 @@
    </nav>
   </header>
   <!-- CONTENT - Sekcja o mnie -->
-  <div class="content">skills</div>
+  <div class="content skills">
+    <h1 class="content-title">My skills</h1>
+    <div class="skills-list">
+      <div class="skills-item">
+        <h3 class="skill-title">Communication</h3>
+        <div class="skill-description">
+            I try to talk with people in an efficient and appropriate manner. 
+            Also, I'm convinced that communication is a two-way street, so being a good listener is vital for me.
+        </div>
+        <div class="skill-level skill-level-5"></div>
+      </div>
+      <div class="skills-item">
+        <h3 class="skill-title">SEO Skills</h3>
+        <div class="skill-description">Using the knowledge and right tools we are able to promote or sell the product by way of the Internet. Those skills I acquired during my work in the SEO agency.</div>
+        <div class="skill-level skill-level-4"></div>
+      </div>
+      <div class="skills-item">
+        <h3 class="skill-title">Google APIs</h3>
+        <div class="skill-description">I had been working in SEM/ SEO agency for 3 years so I am well-versed with a number of Google APIs from Maps to Google Analytics and Search Console.</div>
+        <div class="skill-level skill-level-3"></div>
+      </div>
+      <div class="skills-item">
+        <h3 class="skill-title">Writing Skills</h3>
+        <div class="skill-description">I always do my best to make a useful and valuable contents which are searched very often by users.</div>
+        <div class="skill-level skill-level-4"></div>
+      </div>
+    </div>
+  </div>
   <!-- FOOTER - 2 Kolumny - Formularz Kontakt -->
   <footer>
     <div id="contact" class="contact">
