galeria my projects

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css" />
-  <title>Strona barbary</title>
+  <title>SEO Specialist - Barbara Kwiatkowska</title>
 </head>
 <body>
   <!-- HEADER - Menu i obrazek -->
@@ -24,6 +24,33 @@
   <!-- CONTENT - Sekcja o mnie -->
   <div class="content projects">  
     <h1 class="content-title">My projects</h1>
+    <div class="projects">
+      <div class="project">
+        <a href="img/projects/project_1.jpg" target="_blank">
+          <img src="img/projects/project_1.jpg" alt="project 1 image" title="Projekt 1 - domena.pl">
+        </a>
+      </div>
+      <div class="project">
+          <a href="img/projects/project_2.jpg" target="_blank"></a>
+        <img src="img/projects/project_2.png" alt="project 2 image" title="Projekt 2 - domena.pl">
+      </div>
+      <div class="project">
+          <a href="img/projects/project_3.jpg" target="_blank"></a>
+        <img src="img/projects/project_3.png" alt="project 3 image" title="Projekt 3 - domena.pl">
+      </div>
+      <div class="project">
+          <a href="img/projects/project_4.jpg" target="_blank"></a>
+        <img src="img/projects/project_4.png" alt="project 4 image" title="Projekt 4 - domena.pl">
+      </div>
+      <div class="project">
+          <a href="img/projects/project_5.jpg" target="_blank"></a>
+        <img src="img/projects/project_5.png" alt="project 5 image" title="Projekt 5 - domena.pl">
+      </div>
+      <div class="project">
+          <a href="img/projects/project_6.jpg" target="_blank"></a>
+        <img src="img/projects/project_6.png" alt="project 6 image" title="Projekt 6 - domena.pl">
+      </div>
+    </div>
   </div>
   <!-- FOOTER - 2 Kolumny - Formularz Kontakt -->
   <footer>
