--- a/projects.html
+++ b/projects.html
@@ -31,23 +31,23 @@
         </a>
       </div>
       <div class="project">
-          <a href="img/projects/project_2.png" target="_blank"></a>
+          <a href="img/projects/project_2.jpg" target="_blank"></a>
         <img src="img/projects/project_2.png" alt="project 2 image" title="Projekt 2 - domena.pl">
       </div>
       <div class="project">
-          <a href="img/projects/project_3.png" target="_blank"></a>
+          <a href="img/projects/project_3.jpg" target="_blank"></a>
         <img src="img/projects/project_3.png" alt="project 3 image" title="Projekt 3 - domena.pl">
       </div>
       <div class="project">
-          <a href="img/projects/project_4.png" target="_blank"></a>
+          <a href="img/projects/project_4.jpg" target="_blank"></a>
         <img src="img/projects/project_4.png" alt="project 4 image" title="Projekt 4 - domena.pl">
       </div>
       <div class="project">
-          <a href="img/projects/project_5.png" target="_blank"></a>
+          <a href="img/projects/project_5.jpg" target="_blank"></a>
         <img src="img/projects/project_5.png" alt="project 5 image" title="Projekt 5 - domena.pl">
       </div>
       <div class="project">
-          <a href="img/projects/project_6.png" target="_blank"></a>
+          <a href="img/projects/project_6.jpg" target="_blank"></a>
         <img src="img/projects/project_6.png" alt="project 6 image" title="Projekt 6 - domena.pl">
       </div>
     </div>
